syntax = "proto3";

package product;

option go_package = "product/api/product/v1";

service Product {
  rpc CreateProduct(CreateProductReq) returns (CreateProductResp);
  rpc UpdateProduct(UpdateProductReq) returns (UpdateProductResp);
  rpc DeleteProduct(DeleteProductReq) returns (DeleteProductResp);

  rpc ListProducts(ListProductsReq) returns (ListProductsResp);
  rpc GetProduct(GetProductReq) returns (GetProductResp);
  rpc SearchProducts(SearchProductsReq) returns (SearchProductsResp);
}

message ListProductsReq{
  int32 page = 1;
  int64 pageSize = 2;

  string categoryName = 3;
}

message ProductInfo {
  uint64 id = 1;
  string name = 2;
  string description = 3;
  string picture = 4;
  float price = 5;
  repeated string categories = 6;
  uint64 merchant = 7;
}

message ListProductsResp {
  repeated ProductInfo products = 1;
}

message GetProductReq {
  uint64 id = 1;
}

message GetProductResp {
  ProductInfo product = 1;
}

message SearchProductsReq {
  string query = 1;
}

message SearchProductsResp {
  repeated ProductInfo results = 1;
}
message CreateProductReq {
  string name = 1;
  string description = 2;
  string picture = 3;
  float price = 4;
  repeated string categories = 5;
  uint64 merchant = 6;
  uint64 stock = 7;
}

message CreateProductResp {
  uint64 id = 1;
}

message UpdateProductReq {
  optional string name = 1;
  optional string description = 2;
  optional string picture = 3;
  optional float price = 4;
  repeated string categories = 5;
  uint64 id =6;
}
message UpdateProductResp {
  bool success = 1;
}
message DeleteProductReq {
  uint64 id = 1;
}
message DeleteProductResp {
  bool success = 1;
}
